fixed font-size to reduce too much whitespace

--- a/src/routes/landing/landing.css
+++ b/src/routes/landing/landing.css
@@ -25,9 +25,10 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+    font-size: 1.5rem;
 }
 .hero-content h1 {
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
 .hero-form {
@@ -36,7 +37,7 @@
     gap: 1rem;
 }
 .hero-form span {
-    font-size: 0.5rem;
+    font-size: 0.7rem;
     font-weight: 600;
 }
 .hero-signup {
@@ -54,6 +55,7 @@
     background-color: var(--primary-font);
     border: 1px solid var(--primary-font);
     color: var(--primary-bg);
+    cursor: pointer;
 }
 
 /* ! Features */
@@ -68,11 +70,17 @@
     flex-direction: row;
     gap: 2rem;
     padding: 2rem;
+    font-size: 1.5rem;
 }
 .features-list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     row-gap: 3rem;
+}
+
+.features-list h3 {
+    font-weight: 800;
+    padding-bottom: 2rem;
 }
 
 /* ! CTA  */
@@ -92,6 +100,7 @@
     flex-direction: column;
     gap: 1rem;
     align-items: center;
+    font-size: 1.5rem;
 }
 
 .partners {
@@ -101,7 +110,7 @@
     gap: 2rem;
 }
 .partners img {
-    width: 5rem;
+    width: 8rem;
 }
 .cta a {
     color: var(--primary-bg);
@@ -118,6 +127,7 @@
     gap: 2rem;
     align-items: center;
     letter-spacing: 1px;
+    font-size: 1.5rem;
 }
 .app-icons {
     display: flex;
@@ -140,11 +150,13 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    font-size: 1.5rem;
 }
 .timeline {
     background: var(--primary-color);
     margin: 1.5rem auto;
     padding: 1.5rem;
+    font-size: 1.5rem;
 }
 
 .timeline-outer {
@@ -182,6 +194,7 @@
 .testimonials-preview-content {
     text-align: center;
     line-height: 3rem;
+    font-size: 1.5rem;
 }
 
 .testimonials-list {
@@ -198,6 +211,7 @@
     border: 1px solid var(--primary-black);
     padding: 2rem;
     border-radius: 5px;
+    font-size: 1.5rem;
 }
 .testimonial-rating {
     width: 7rem;
@@ -220,6 +234,7 @@
 .pricing-preview-content {
     text-align: center;
     line-height: 3rem;
+    font-size: 1.5rem;
 }
 
 .billing-buttons {
@@ -248,6 +263,8 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
     padding: 2rem;
+    width: 75%;
+    margin: 0 auto;
 }
 .basic-plan,
 .business-plan {
@@ -258,6 +275,7 @@
     border-radius: 5px;
     padding: 1rem;
     padding-bottom: 5rem;
+    font-size: 1.5rem;
 }
 
 .pricing-features li {
